# kestrel

./: .gitignore  MANIFEST.in  Makefile  README.md  code_mode.py  pyproject.toml  requirements.txt
benchmarking/: benchmarking.py  kestrel_client.py  mcp_client.py
benchmarking/services/geocoding/: client.py
benchmarking/services/nasa_iss_locator/: client.py
kestrel/: code_mode.py
kestrel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kestrel/prompts/: execution_plan.md
prompts/: execution_plan.md
